--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "Proyecto de la UFG 4 ciclo de la materia Diseño Web, representa una tienda en linea",
   "dependencies": {
-    "express": "^4.21.0",
-    "morgan": "^1.10.0"
+    "express": "4.21.0",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "connect-livereload": "0.6.1",
+    "livereload": "0.9.3",
+    "nodemon": "3.1.7"
   }
 }
