--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "node src/app.js",
+    "start": "cross-env NODE_ENV=production node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "connect-livereload": "0.6.1",
+    "cross-env": "^7.0.3",
     "livereload": "0.9.3",
     "nodemon": "3.1.7"
   }
